[package]
name = "alexa"
version = "0.1.2"
authors = ["Neil LoBracco <neil.lobracco@gmail.com>"]
description = "A library for building Alexa (Amazon Echo) skills"
repository = "https://github.com/neil-lobracco/alexa-rs"
license = "GPL-2.0"
build = "build.rs"

[build-dependencies]
serde_codegen = "0.9"

[dependencies]
chrono = "0.3"
iron = "0.5"
bodyparser = "0.6"
serde_json = "0.9"
serde = "0.9"

[profile.release]
lto = true
opt-level = "s"
panic = 'abort'

[profile.dev]
codegen-units = 8
